src/kits/riot/components/Menu/Menu.css
.riot-menu__trigger-chevron {
  font-size: var(--riot-fs-13);
}
.riot-menu__icon:empty {
  display: none;
}
.riot-menu__icon {
  display: inline-flex;
  flex: 0 0 auto;
  width: var(--riot-fs-18);
  color: var(--riot-text-dim);
}
.riot-menu__label {
  flex: 1;
  min-width: 0;
}
.riot-menu__shortcut {
  flex: 0 0 auto;
  font-family: var(--riot-font-mono);
  font-size: var(--riot-fs-11);
  color: var(--riot-text-mute);
}
.riot-menu__arrow {
  display: inline-flex;
  flex: 0 0 auto;
  color: var(--riot-text-dim);
}
.riot-menu__item--danger,
.riot-menu__item--danger .riot-menu__icon {
  color: var(--riot-danger);
}
.riot-list-item.riot-menu__item--danger[data-highlighted]:not([data-disabled]) {
  background: var(--riot-danger);
  color: var(--riot-text-invert);
}
.riot-menu__item--danger[data-highlighted]:not([data-disabled]) .riot-list-item__text {
  text-decoration: none;
}
.riot-menu__item--danger[data-highlighted]:not([data-disabled]) .riot-menu__icon,
.riot-menu__item--danger[data-highlighted]:not([data-disabled]) .riot-menu__shortcut {
  color: var(--riot-text-invert);
}

